samples/_failures_safe/1761295583_472862_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f76754b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1f76754b.c:163:9: error: expected identifier at end of input
  163 |         char c = lexer->input[lexer->
      |         ^~~~
./samples/SAFE/__tmp_1f76754b.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f76754b.c:163:9: error: expected declaration or statement at end of input
